# sentry

./:  doczrc.js  .babelrc  .babelrc.js  .bowerrc  .browserslistrc  .codeowners-config.yml  .coveragerc  .craft.yml  .deepsource.toml  .dockerignore  .editorconfig  .env.example  .envrc  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.relax.js  .fossa.yml  .git-blame-ignore-revs  .git-commit-msg.txt  .gitattributes  .gitignore  .gitignore_recruiter  .gitlab-ci.yml  .gitmodules  .isort.cfg  .jshintignore  .jshintrc  .knip.json  .mailmap  .mcp.json  .mypy_worker.9cc44f82.0.json  .mypy_worker.9cc44f82.1.json  .mypy_worker.9cc44f82.2.json  .mypy_worker.9cc44f82.3.json  .mypy_worker.9cc44f82.4.json  .node-version  .nowignore  .npmrc  .nvmrc  (+565 more)
.agents/: .gitignore
.artifacts/: READ.md  README
.circleci/: config.yml
.claude/: settings.json
.codex/: config.toml
.cursor/: environment.json  install.sh  mcp.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  Sarif.yml  codeowners-coverage-baseline.txt  dependabot.yml  dependency-review-config.yml  eslint-stylish.json  file-filters.yml  labels.yml  pytest.json  tsc.json
.storybook/: .babelrc  .babelrc.js  addons.js  babel.config.js  config.js  main.js  main.ts  manager.js  manager.ts  package.json  presets.js  preview-head.html  preview.js  preview.tsx  previewGlobalStyles.tsx  storybook.less  webpack.config.js  webpack.config.ts
.travis/: deploy-storybook.sh  gcs-sentry-integrations.json  storybook-credentials.tar.gz.enc
.tx/: config
.yarn/: build-state.yml
api/: 00_START_HERE.md  BEFORE_AND_AFTER.md  CHANGES.md  CHECKLIST.md  COMPARISON.md  COMPLETE.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  FILE_TREE.txt  FIX_COMPLETE.txt  FIX_OVERVIEW.txt  FIX_SUMMARY.md  INDEX.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_UUID_FIX.md  SOLUTION.md  SUMMARY.md  THE_FIX.md  UUID_FIX_DOCUMENTATION.md  VALIDATION_REPORT.md  VISUAL_EXPLANATION.md  VISUAL_FLOW.md  __init__.py  demo_bug_and_fix.py  demo_fix.py  demonstrate_fix.py  dependencies.py  main.py  migration_script.py  requirements.txt  run_all_tests.sh  schemas.py  services.py  test_api_endpoint.py  test_exact_error_scenario.py  test_fix.py  test_mfa_fix.py  (+10 more)
api-docs/: .node-version  .npmrc  .volta.json  apidocs.py  dump.rdb  generator.py  index.js  index.ts  installed.txt  openapi-derefed.json  openapi-diff.js  openapi-diff.ts  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rpc_method_schema.json  sentry.apidocs.conf.py  sentry.conf.py  watch.js  watch.ts
bootstrap/: Makefile  sentry.less
build-utils/: build-integration-docs-plugin.js  component-props-plugin.ts  file-builder-plugin.ts  frontmatter-index-loader.ts  hackweek.ts  integration-docs-fetch-plugin.js  integration-docs-fetch-plugin.ts  integration-docs-resolver.js  integration-docs.js  last-built-plugin.js  last-built-plugin.ts  list-files-plugin.ts  mdx-plugins.ts  mdx-typecheck.ts  optional-locale-chunk-plugin.js  peggy-loader.ts  po-catalog-loader.ts  process-loader-html.ts  remark-unwrap-mdx-paragraphs.ts  sentry-asset-file-size.js  sentry-instrumentation.js  sentry-instrumentation.ts  signed-file-builder.ts  signed-file-generator.ts  stories-index-plugin.ts  stories-list-builder.ts  ts-extract-gettext.ts  vercel-ignore-command.sh
ci/: setup  test
codemods/: spaceliteral.ts
conf/: celery_integration_patch.py  settings_integration_patch.py
config/: bigquery.env.example  build-chartcuterie.ts  commit-template  pyrightconfig-commithook.json  rspack.chartcuterie.config.ts  tsconfig.base.json  tsconfig.benchmark.json  tsconfig.build.json  tsconfig.ci.json  tsconfig.jest.json  webpack.chartcuterie.config.js  webpack.chartcuterie.config.ts  webpack.css.config.js
dblog/: admin.py  feeds.py  handlers.py  helpers.py  manager.py  models.py  routers.py  settings.py  urls.py  utils.py  views.py
debian/: changelog  control  rules
devenv/: config.ini  config.toml  post_bootstrap.py  post_fetch.py  sync.py
devservices/: config.yml  docker-compose-testing.yml  docker-compose.yml  programs.conf
djangodblog/: __init__.py  admin.py  feeds.py  handlers.py  helpers.py  manager.py  middleware.py  models.py  routers.py  settings.py  tests.py  urls.py  utils.py
docker/: Dockerfile  builder.dockerfile  builder.sh  cloudbuild.yaml  config.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  frontend-ci.Dockerfile  frontend-ci.dockerignore  heroku.web.dockerfile  heroku.web.latest.dockerfile  sentry.conf.py  start.sh  test.dockerfile
docker-test/: .dockerignore  Dockerfile
docker_reverse_proxy/: Dockerfile  docker-entrypoint.sh
docs/: MIGRATIONS.md  Makefile  NEW-699-seer-assertions-research.md  ST_CONSUMER_CONFIGURATION.md  VALIDATION_IMPROVEMENTS.md  beacon.rst  benchmark.md  bigquery_setup.md  billing_account_reactivation.md  buffer.rst  changelog.rst  clean-branch-plan.md  cli.rst  commit-message-guide.md  conf.py  config.rst  creating-new-integration.md  digests.rst  dsym.rst  extensions.rst  faq.rst  filestore.rst  health-checks.rst  inbound-mail.rst  index.rst  install.rst  installation.rst  internal-metrics.rst  investigations.md  make.bat  memory.md  monitoring.rst  nginx.rst  nodestore.rst  notes.md  oauth-2.1.md  optimizations.md  other-ci-jobs.md  performance.rst  pipelines.rst  (+14 more)
docs-redirect/: Makefile  conf.py  make.bat
docs-ui/: .eslintrc  .eslintrc.js  index.js  now.json  package.json  vercel.json
example/: README.rst  manage.py  settings.py  urls.py  views.py
example_project/: .gitignore  filters.py  settings.py  urls.py
examples/: FASTAPI_JOBS_FIX_README.md  README.md  encrypted_field_usage.py  grpc_client_example.py
sandbox/harness/: pyproject.toml
sandbox/harness/sentry_sandbox/: __init__.py  cli.py  sandbox.py  testmap.py
tests/pytest-parallel/: pyproject.toml
tests/pytest-parallel/src/pytest_parallel/: __init__.py  coordinator.py  worker.py
tests/pytest-parallel/tests/: test_partition.py
(+58764 files in other folders)
