[project]
name = "sentry"
version = "0.0.0"
dependencies = [
    "amqp==5.3.1",
    "anyio==3.7.1",
    "asgiref==3.8.1",
    "attrs==24.2.0",
    "avalara==20.9.0",
    "beautifulsoup4==4.7.1",
    "billiard==4.2.1",
    "black==24.10.0",
    "boto3==1.34.128",
    "botocore==1.34.128",
    "brotli==1.1.0",
    "cachetools==5.3.0",
    "celery==5.5.2",
    "certifi==2024.7.4",
    "cffi==1.17.1",
    "cfgv==3.3.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.0",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "confluent-kafka==2.8.0",
    "covdefaults==2.3.0",
    "coverage==7.6.4",
    "cronsim==2.6",
    "cryptography==44.0.1",
    "cssselect==1.0.3",
    "cssutils==2.9.0",
    "datadog==0.49.1",
    "devservices==1.2.1",
    "distlib==0.3.8",
    "distro==1.8.0",
    "django==5.2.1",
    "django-crispy-forms==1.14.0",
    "django-csp==3.8",
    "django-pg-zero-downtime-migrations==0.18",
    "django-stubs-ext==5.2.1",
    "djangorestframework==3.16.0",
    "docker==7.1.0",
    "drf-spectacular==0.27.2",
    "ephemeral-port-reserve==1.1.4",
    "execnet==1.9.0",
    "fastjsonschema==2.16.2",
    "fido2==0.9.2",
    "filelock==3.13.1",
    "flake8==7.3.0",
    "flake8-bugbear==22.10.27",
    "flake8-logging==1.5.0",
    "google-api-core==2.19.1",
    "google-auth==2.29.0",
    "google-cloud-bigtable==2.30.1",
    "google-cloud-build==3.24.2",
    "google-cloud-core==2.4.1",
    "google-cloud-functions==1.17.0",
    "google-cloud-kms==2.24.2",
    "google-cloud-pubsub==2.23.0",
    "google-cloud-spanner==3.49.0",
    "google-cloud-storage==2.18.0",
    "google-crc32c==1.6.0",
    "google-resumable-media==2.7.0",
    "googleapis-common-protos==1.63.2",
    "grpc-google-iam-v1==0.13.1",
    "grpc-stubs==1.53.0.5",
    "grpcio==1.67.0",
    "grpcio-status==1.67.0",
    "h11==0.13.0",
    "h2==4.2.0",
    "hiredis==2.3.2",
    "honcho==2.0.0",
    "hpack==4.1.0",
    "httpcore==1.0.2",
    "httpx==0.25.2",
    "hyperframe==6.1.0",
    "identify==2.6.1",
    "idna==3.7",
    "inflection==0.5.1",
    "iniconfig==1.1.1",
    "iso3166==2.1.1",
    "isodate==0.6.1",
    "isort==5.10.1",
    "jmespath==0.10.0",
    "jsonschema==4.20.0",
    "jsonschema-path==0.3.2",
    "jsonschema-spec==0.2.4",
    "jsonschema-specifications==2023.7.1",
    "kombu==5.5.3",
    "lazy-object-proxy==1.10.0",
    "lxml==5.3.0",
    "lxml-stubs==0.4.0",
    "markupsafe==2.1.2",
    "maxminddb==2.3.0",
    "mccabe==0.7.0",
    "milksnake==0.1.6",
    "mistune==2.0.4",
    "mmh3==4.0.0",
    "more-itertools==8.13.0",
    "msgpack==1.1.0",
    "msgpack-types==0.2.0",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "nodeenv==1.9.1",
    "oauthlib==3.1.0",
    "openai==1.3.5",
    "openapi-core==0.18.2",
    "openapi-pydantic==0.4.0",
    "openapi-schema-validator==0.6.2",
    "openapi-spec-validator==0.7.1",
    "orjson==3.10.10",
    "outcome==1.2.0",
    "packaging==24.1",
    "parse==1.19.0",
    "parsimonious==0.10.0",
    "pathable==0.4.3",
    "pathspec==0.9.0",
    "petname==2.6",
    "phonenumberslite==8.12.55",
    "pillow==11.0.0",
    "platformdirs==4.2.0",
    "pluggy==1.5.0",
    "pre-commit==4.2.0",
    "prompt-toolkit==3.0.51",
    "proto-plus==1.25.0",
    "protobuf==5.27.3",
    "psutil==5.9.7",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.4.5",
    "pyasn1-modules==0.2.4",
    "pycodestyle==2.14.0",
    "pycountry==17.5.14",
    "pycparser==2.21",
    "pydantic==1.10.20",
    "pyflakes==3.4.0",
    "pyjwt==2.4.0",
    "pymemcache==4.0.0",
    "pysocks==1.7.1",
    "pytest==8.1.2",
    "pytest-cov==4.0.0",
    "pytest-django==4.9.0",
    "pytest-fail-slow==0.3.0",
    "pytest-json-report==1.5.0",
    "pytest-metadata==3.1.1",
    "pytest-rerunfailures==15.0",
    "pytest-sentry==0.3.0",
    "pytest-workaround-12888==1.0.0",
    "pytest-xdist==3.0.2",
    "python-dateutil==2.9.0.post0",
    "python-rapidjson==1.8",
    "python-u2flib-server==5.0.0",
    "python3-saml==1.15.0",
    "pyupgrade==3.19.1",
    "pyuwsgi==2.0.28.post1",
    "pyvat==1.3.15",
    "pyyaml==6.0.2",
    "rb==1.10.0",
    "redis==3.4.1",
    "redis-py-cluster==2.1.0",
    "referencing==0.30.2",
    "regex==2022.9.13",
    "reportlab==4.4.0",
    "requests==2.32.3",
    "requests-file==2.1.0",
    "requests-oauthlib==1.2.0",
    "responses==0.23.1",
    "rfc3339-validator==0.1.2",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.20.0",
    "rsa==4.8",
    "s3transfer==0.10.0",
    "selenium==4.16.0",
    "sentry-arroyo==2.25.0",
    "sentry-cli==2.16.0",
    "sentry-covdefaults-disable-branch-coverage==1.0.2",
    "sentry-devenv==1.21.0",
    "sentry-forked-django-stubs==5.2.1.post3",
    "sentry-forked-djangorestframework-stubs==3.16.0.post1",
    "sentry-forked-email-reply-parser==0.5.12.post1",
    "sentry-kafka-schemas==1.3.13",
    "sentry-ophio==1.1.3",
    "sentry-protos==0.2.1",
    "sentry-redis-tools==0.5.0",
    "sentry-relay==0.9.9",
    "sentry-sdk==2.29.1",
    "sentry-usage-accountant==0.0.10",
    "setuptools==70.0.0",
    "simplejson==3.17.6",
    "six==1.17.0",
    "slack-sdk==3.27.2",
    "sniffio==1.3.1",
    "snuba-sdk==3.0.43",
    "sortedcontainers==2.4.0",
    "soupsieve==2.3.2.post1",
    "sqlparse==0.5.0",
    "statsd==3.3.0",
    "stripe==6.7.0",
    "structlog==22.1.0",
    "supervisor==4.2.5",
    "symbolic==12.14.1",
    "tiktoken==0.8.0",
    "time-machine==2.16.0",
    "tldextract==5.1.2",
    "tokenize-rt==6.1.0",
    "toronado==0.1.0",
    "tqdm==4.66.4",
    "trio==0.25.0",
    "trio-websocket==0.11.1",
    "types-beautifulsoup4==4.11.6",
    "types-cachetools==5.3.0.5",
    "types-jsonschema==4.16.1",
    "types-oauthlib==3.2.0.8",
    "types-parsimonious==0.10.0.8",
    "types-pillow==9.5.0.4",
    "types-protobuf==4.23.0.1",
    "types-psutil==5.9.5.16",
    "types-psycopg2==2.9.21",
    "types-python-dateutil==2.8.19",
    "types-pyyaml==6.0.11",
    "types-redis==3.5.18",
    "types-requests==2.32.0.20241016",
    "types-requests-oauthlib==2.0.0.20250119",
    "types-setuptools==69.0.0.0",
    "types-simplejson==3.17.7.2",
    "types-unidiff==0.7.0.20240505",
    "typing-extensions==4.12.0",
    "tzdata==2025.2",
    "ua-parser==0.10.0",
    "unidiff==0.7.4",
    "uritemplate==4.1.1",
    "urllib3==2.2.2",
    "vine==5.1.0",
    "virtualenv==20.26.6",
    "vroomrs==0.1.6",
    "wcwidth==0.2.13",
    "werkzeug==3.0.6",
    "wrapt==1.17.0",
    "wsproto==1.1.0",
    "xmlsec==1.3.14",
    "zstandard==0.18.0",
]

[tool.black]
# File filtering is taken care of in pre-commit.
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1
known_first_party = "sentry"
skip = "migrations"

[tool.pytest.ini_options]
python_files = "test_*.py sentry/testutils/*"
# note: When updating the traceback format, make sure to update .github/pytest.json
# We don't use the celery pytest plugin.
addopts = "--tb=short -p no:celery --nomigrations"
# TODO: --import-mode=importlib will become the default soon,
# currently we have a few relative imports that don't work with that.
markers = [
  "snuba: test requires access to snuba",
  "snuba_ci: test is run in snuba ci",
  "sentry_metrics: test requires access to sentry metrics",
  "symbolicator: test requires access to symbolicator",
  "querybuilder: smoke tests for QueryBuilders",
]
filterwarnings = [
  # Consider all warnings to be errors other than the ignored ones.
  "error",

  # this warning in protobuf causes a segfault in 3.12+ protocolbuffers/protobuf#15077
  "ignore:Type google\\._upb.*",

  # TODO: we should fix these, but for now there's a lot
  "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated.*",
  "ignore:datetime.datetime.utcnow\\(\\) is deprecated.*",

  # The following warning filters are for pytest only.
  "ignore:.*sentry.digests.backends.dummy.DummyBackend.*:sentry.utils.warnings.UnsupportedBackend",

  # pytest has not yet implemented the replacement for this yet
  "ignore:The --looponfail command line argument.*",
]
looponfailroots = ["src", "tests"]

[tool.mypy]
python_version = "3.13"
mypy_path = ["fixtures/stubs-for-mypy"]
plugins = [
  "pydantic.mypy",
  "mypy_django_plugin.main",
  "tools.mypy_helpers.plugin",
]
files = ["."]
exclude = ["^.venv/", "^venv/", "^self-hosted/"]

# minimal strictness settings
check_untyped_defs = true
no_implicit_reexport = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
enable_error_code = ["ignore-without-code", "redundant-self"]
local_partial_types = true  # compat with dmypy

[tool.django-stubs]
django_settings_module = "sentry.conf.server_mypy"

# these have py.typed but incorrect types
[[tool.mypy.overrides]]
module = [
  # TODO: these cause type errors when followed
  "snuba_sdk.*",
]
follow_imports = "skip"

# python3 -m tools.mypy_helpers.make_stub_ignores
# begin: missing 3rd party stubs
# - add .pyi files to fixtures/stubs-for-mypy
# - or find a 3rd party stub
[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.client.*",
    "botocore.exceptions.*",
    "celery.*",
    "confluent_kafka.*",
    "cssselect.*",
    "django_zero_downtime_migrations.backends.postgres.schema.*",
    "docker.*",
    "fido2.*",
    "google.auth.*",
    "google.cloud.*",
    "google.resumable_media.common.*",
    "google.rpc.status_pb2.*",
    "kombu.*",
    "mistune.*",
    "onelogin.saml2.auth.*",
    "onelogin.saml2.constants.*",
    "onelogin.saml2.idp_metadata_parser.*",
    "rb.*",
    "statsd.*",
    "u2flib_server.model.*",
]
ignore_missing_imports = true
# end: missing 3rd party stubs

# python3 -m tools.mypy_helpers.make_module_ignores
# begin: sentry modules with typing issues
# - remove the module from the list and fix the issues!
# - python3 -m tools.mypy_helpers.find_easiest_modules
[[tool.mypy.overrides]]
module = [
    "sentry.api.endpoints.organization_events_meta",
    "sentry.api.endpoints.organization_events_spans_performance",
    "sentry.api.endpoints.organization_releases",
    "sentry.api.endpoints.project_rules_configuration",
    "sentry.api.paginator",
    "sentry.db.postgres.base",
    "sentry.eventstore.models",
    "sentry.identity.gitlab.provider",
    "sentry.identity.oauth2",
    "sentry.incidents.endpoints.bases",
    "sentry.integrations.github.client",
    "sentry.integrations.gitlab.issues",
    "sentry.integrations.pagerduty.actions.form",
    "sentry.integrations.slack.message_builder.notifications.issues",
    "sentry.integrations.slack.webhooks.event",
    "sentry.integrations.utils.sync",
    "sentry.issues.search",
    "sentry.middleware.auth",
    "sentry.middleware.ratelimit",
    "sentry.net.http",
    "sentry.notifications.notifications.activity.base",
    "sentry.plugins.config",
    "sentry.release_health.metrics_sessions_v2",
    "sentry.search.events.builder.errors",
    "sentry.search.events.builder.metrics",
    "sentry.search.events.datasets.filter_aliases",
    "sentry.search.events.datasets.metrics_layer",
    "sentry.search.events.filter",
    "sentry.search.snuba.executors",
    "sentry.snuba.metrics.query_builder",
    "sentry.tasks.base",
    "sentry.testutils.cases",
    "sentry.web.frontend.auth_login",
    "sentry_plugins.jira.plugin",
    "tests.sentry.api.helpers.test_group_index",
    "tests.sentry.issues.test_utils",
]
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-overload",
    "misc",
    "operator",
    "override",
    "union-attr",
]
# end: sentry modules with typing issues

# begin: stronger typing
[[tool.mypy.overrides]]
module = [
    "fixtures.safe_migrations_apps.*",
    "sentry.analytics.*",
    "sentry.api.decorators",
    "sentry.api.endpoints.integrations.sentry_apps.installation.external_issue.*",
    "sentry.api.endpoints.project_repo_path_parsing",
    "sentry.api.endpoints.release_thresholds.health_checks.*",
    "sentry.api.event_search",
    "sentry.api.helpers.deprecation",
    "sentry.api.helpers.environments",
    "sentry.api.helpers.group_index.delete",
    "sentry.api.helpers.group_index.update",
    "sentry.api.helpers.source_map_helper",
    "sentry.api.permissions",
    "sentry.api.serializers.models.organization_member.*",
    "sentry.api.serializers.rest_framework.group_notes",
    "sentry.audit_log.services.*",
    "sentry.auth.access",
    "sentry.auth.authenticators.recovery_code",
    "sentry.auth.manager",
    "sentry.auth.services.*",
    "sentry.auth.view",
    "sentry.bgtasks.*",
    "sentry.buffer.*",
    "sentry.build.*",
    "sentry.data_export.processors.issues_by_tag",
    "sentry.data_secrecy.models.*",
    "sentry.data_secrecy.service.*",
    "sentry.db.models.fields.citext",
    "sentry.db.models.fields.foreignkey",
    "sentry.db.models.fields.hybrid_cloud_foreign_key",
    "sentry.db.models.fields.types",
    "sentry.db.models.manager.*",
    "sentry.db.models.paranoia",
    "sentry.db.models.utils",
    "sentry.db.pending_deletion",
    "sentry.deletions.*",
    "sentry.digests.*",
    "sentry.digests.notifications",
    "sentry.dynamic_sampling.models.*",
    "sentry.dynamic_sampling.rules.biases.*",
    "sentry.dynamic_sampling.rules.combinators.*",
    "sentry.dynamic_sampling.rules.helpers.*",
    "sentry.dynamic_sampling.tasks.helpers.*",
    "sentry.eventstore.reprocessing.*",
    "sentry.eventstore.reprocessing.redis",
    "sentry.eventstream.*",
    "sentry.eventtypes.error",
    "sentry.feedback.migrations.*",
    "sentry.flags.migrations.*",
    "sentry.grouping.api",
    "sentry.grouping.component",
    "sentry.grouping.fingerprinting",
    "sentry.grouping.fingerprinting.*",
    "sentry.grouping.grouping_info",
    "sentry.grouping.ingest.*",
    "sentry.grouping.parameterization",
    "sentry.grouping.utils",
    "sentry.grouping.variants",
    "sentry.hybridcloud.*",
    "sentry.identity.discord.*",
    "sentry.identity.github_enterprise.*",
    "sentry.identity.services.*",
    "sentry.identity.vsts_extension.*",
    "sentry.incidents.utils.*",
    "sentry.ingest.slicing",
    "sentry.integrations.discord.actions.*",
    "sentry.integrations.discord.message_builder.base.component.*",
    "sentry.integrations.discord.message_builder.base.embed.*",
    "sentry.integrations.discord.utils.*",
    "sentry.integrations.discord.views.*",
    "sentry.integrations.discord.webhooks.*",
    "sentry.integrations.github.actions.*",
    "sentry.integrations.github_enterprise.actions.*",
    "sentry.integrations.jira.actions.*",
    "sentry.integrations.jira.endpoints.*",
    "sentry.integrations.jira.models.*",
    "sentry.integrations.jira_server.actions.*",
    "sentry.integrations.jira_server.utils.*",
    "sentry.integrations.models.integration_feature",
    "sentry.integrations.project_management.*",
    "sentry.integrations.repository.*",
    "sentry.integrations.services.*",
    "sentry.integrations.slack.threads.*",
    "sentry.integrations.slack.views.*",
    "sentry.integrations.source_code_management.repository",
    "sentry.integrations.vsts.actions.*",
    "sentry.integrations.vsts.tasks.*",
    "sentry.issues",
    "sentry.issues.analytics",
    "sentry.issues.apps",
    "sentry.issues.auto_source_code_config.*",
    "sentry.issues.constants",
    "sentry.issues.endpoints",
    "sentry.issues.endpoints.actionable_items",
    "sentry.issues.endpoints.browser_reporting_collector",
    "sentry.issues.endpoints.group_activities",
    "sentry.issues.endpoints.group_details",
    "sentry.issues.endpoints.group_event_details",
    "sentry.issues.endpoints.group_events",
    "sentry.issues.endpoints.group_notes",
    "sentry.issues.endpoints.group_notes_details",
    "sentry.issues.endpoints.group_open_periods",
    "sentry.issues.endpoints.group_similar_issues_embeddings",
    "sentry.issues.endpoints.group_tombstone",
    "sentry.issues.endpoints.group_tombstone_details",
    "sentry.issues.endpoints.organization_derive_code_mappings",
    "sentry.issues.endpoints.organization_eventid",
    "sentry.issues.endpoints.organization_group_index",
    "sentry.issues.endpoints.organization_group_index_stats",
    "sentry.issues.endpoints.organization_group_search_view_details",
    "sentry.issues.endpoints.organization_group_search_view_visit",
    "sentry.issues.endpoints.organization_group_search_views",
    "sentry.issues.endpoints.organization_release_previous_commits",
    "sentry.issues.endpoints.organization_searches",
    "sentry.issues.endpoints.organization_shortid",
    "sentry.issues.endpoints.project_event_details",
    "sentry.issues.endpoints.project_events",
    "sentry.issues.endpoints.project_group_index",
    "sentry.issues.endpoints.project_group_stats",
    "sentry.issues.endpoints.project_stacktrace_link",
    "sentry.issues.endpoints.related_issues",
    "sentry.issues.endpoints.shared_group_details",
    "sentry.issues.endpoints.team_groups_old",
    "sentry.issues.escalating.escalating",
    "sentry.issues.escalating.escalating_group_forecast",
    "sentry.issues.escalating.escalating_issues_alg",
    "sentry.issues.escalating.forecasts",
    "sentry.issues.ignored",
    "sentry.issues.ingest",
    "sentry.issues.issue_occurrence",
    "sentry.issues.json_schemas",
    "sentry.issues.merge",
    "sentry.issues.occurrence_consumer",
    "sentry.issues.ongoing",
    "sentry.issues.ownership.*",
    "sentry.issues.priority",
    "sentry.issues.producer",
    "sentry.issues.query",
    "sentry.issues.receivers",
    "sentry.issues.related.*",
    "sentry.issues.run",
    "sentry.issues.services.*",
    "sentry.issues.status_change",
    "sentry.issues.status_change_consumer",
    "sentry.issues.status_change_message",
    "sentry.issues.update_inbox",
    "sentry.lang.java.processing",
    "sentry.llm.*",
    "sentry.middleware.reporting_endpoint",
    "sentry.migrations.*",
    "sentry.models.activity",
    "sentry.models.event",
    "sentry.models.eventattachment",
    "sentry.models.groupassignee",
    "sentry.models.grouphistory",
    "sentry.models.groupinbox",
    "sentry.models.groupsubscription",
    "sentry.models.options.*",
    "sentry.monitors.consumers.monitor_consumer",
    "sentry.monkey.*",
    "sentry.net.socket",
    "sentry.nodestore.*",
    "sentry.nodestore.base",
    "sentry.nodestore.bigtable.backend",
    "sentry.nodestore.django.backend",
    "sentry.nodestore.django.models",
    "sentry.nodestore.filesystem.backend",
    "sentry.nodestore.models",
    "sentry.notifications.platform.*",
    "sentry.notifications.services.*",
    "sentry.options.rollout",
    "sentry.organizations.*",
    "sentry.performance_issues.detectors.*",
    "sentry.performance_issues.performance_detection",
    "sentry.pipeline.*",
    "sentry.plugins.base.response",
    "sentry.plugins.base.view",
    "sentry.plugins.validators.*",
    "sentry.post_process_forwarder.*",
    "sentry.profiles.*",
    "sentry.projects.*",
    "sentry.queue.*",
    "sentry.ratelimits.leaky_bucket",
    "sentry.relay.config.metric_extraction",
    "sentry.relay.types.*",
    "sentry.release_health.release_monitor.*",
    "sentry.relocation.api.endpoints.artifacts.*",
    "sentry.relocation.services.relocation_export.*",
    "sentry.replays.consumers.*",
    "sentry.replays.lib.new_query.*",
    "sentry.replays.migrations.*",
    "sentry.reprocessing2",
    "sentry.roles.*",
    "sentry.rules.actions.sentry_apps.*",
    "sentry.rules.conditions.*",
    "sentry.rules.history.endpoints.*",
    "sentry.runner.*",
    "sentry.search.snuba.backend",
    "sentry.security.*",
    "sentry.seer.similarity.*",
    "sentry.sentry_apps.external_issues.*",
    "sentry.sentry_apps.services.*",
    "sentry.sentry_apps.utils.*",
    "sentry.sentry_apps.web.*",
    "sentry.sentry_metrics.consumers.indexer.*",
    "sentry.sentry_metrics.indexer.limiters.*",
    "sentry.shared_integrations.exceptions.*",
    "sentry.slug.*",
    "sentry.snuba.metrics.extraction",
    "sentry.snuba.metrics.naming_layer.*",
    "sentry.snuba.query_subscriptions.*",
    "sentry.spans.consumers.process_segments.*",
    "sentry.spans.grouping.*",
    "sentry.stacktraces.platform",
    "sentry.status_checks.*",
    "sentry.tasks.beacon",
    "sentry.tasks.commit_context",
    "sentry.tasks.embeddings_grouping.backfill_seer_grouping_records_for_project",
    "sentry.tasks.on_demand_metrics",
    "sentry.tasks.reprocessing2",
    "sentry.tasks.store",
    "sentry.taskworker.*",
    "sentry.tempest.endpoints.*",
    "sentry.tempest.migrations.*",
    "sentry.testutils.helpers.task_runner",
    "sentry.testutils.helpers.usage_accountant",
    "sentry.testutils.pytest.json_report_reruns",
    "sentry.testutils.pytest.show_flaky_failures",
    "sentry.testutils.skips",
    "sentry.toolbar.utils.*",
    "sentry.types.*",
    "sentry.uptime.migrations.*",
    "sentry.usage_accountant.*",
    "sentry.users.*",
    "sentry.utils.arroyo",
    "sentry.utils.assets",
    "sentry.utils.audit",
    "sentry.utils.celery",
    "sentry.utils.codeowners",
    "sentry.utils.colors",
    "sentry.utils.email.*",
    "sentry.utils.env",
    "sentry.utils.event",
    "sentry.utils.event_tracker",
    "sentry.utils.forms",
    "sentry.utils.function_cache",
    "sentry.utils.geo",
    "sentry.utils.github",
    "sentry.utils.imports",
    "sentry.utils.iterators",
    "sentry.utils.javascript",
    "sentry.utils.kafka",
    "sentry.utils.kvstore.*",
    "sentry.utils.lazy_service_wrapper",
    "sentry.utils.linksign",
    "sentry.utils.locking.*",
    "sentry.utils.math",
    "sentry.utils.memory",
    "sentry.utils.metrics",
    "sentry.utils.migrations",
    "sentry.utils.numbers",
    "sentry.utils.otp",
    "sentry.utils.projectflags",
    "sentry.utils.pubsub",
    "sentry.utils.redis",
    "sentry.utils.redis_metrics",
    "sentry.utils.registry",
    "sentry.utils.sdk_crashes.*",
    "sentry.utils.security.*",
    "sentry.utils.sentry_apps.*",
    "sentry.utils.services",
    "sentry.utils.signing",
    "sentry.utils.sms",
    "sentry.utils.snowflake",
    "sentry.utils.snuba_rpc",
    "sentry.utils.urls",
    "sentry.utils.uwsgi",
    "sentry.utils.versioning",
    "sentry.utils.warnings",
    "sentry.utils.zip",
    "sentry.web.frontend.auth_provider_login",
    "sentry.web.frontend.cli",
    "sentry.web.frontend.csv",
    "sentry.web.frontend.mixins.*",
    "sentry.workflow_engine.handlers.action.*",
    "sentry.workflow_engine.handlers.condition.*",
    "sentry.workflow_engine.migrations.*",
    "sentry.workflow_engine.processors.*",
    "sentry.workflow_engine.typings.*",
    "sentry.workflow_engine.utils.*",
    "sentry_plugins.base",
    "social_auth.migrations.*",
    "sudo.*",
    "tests.sentry.api.endpoints.issues.test_organization_derive_code_mappings",
    "tests.sentry.api.endpoints.test_browser_reporting_collector",
    "tests.sentry.api.endpoints.test_project_repo_path_parsing",
    "tests.sentry.audit_log.services.*",
    "tests.sentry.deletions.test_group",
    "tests.sentry.event_manager.test_event_manager",
    "tests.sentry.grouping.seer_similarity.test_get_seer_similar_issues",
    "tests.sentry.grouping.seer_similarity.test_seer",
    "tests.sentry.grouping.seer_similarity.test_seer_eligibility",
    "tests.sentry.grouping.test_fingerprinting",
    "tests.sentry.grouping.test_hashing",
    "tests.sentry.grouping.test_parameterization",
    "tests.sentry.hybridcloud.*",
    "tests.sentry.incidents.serializers.*",
    "tests.sentry.integrations.msteams.webhook.*",
    "tests.sentry.integrations.repository.base.*",
    "tests.sentry.integrations.repository.issue_alert.*",
    "tests.sentry.integrations.slack.threads.*",
    "tests.sentry.issues",
    "tests.sentry.issues.auto_source_code_config.*",
    "tests.sentry.issues.endpoints",
    "tests.sentry.issues.endpoints.test_actionable_items",
    "tests.sentry.issues.endpoints.test_group_activities",
    "tests.sentry.issues.endpoints.test_group_details",
    "tests.sentry.issues.endpoints.test_group_event_details",
    "tests.sentry.issues.endpoints.test_group_events",
    "tests.sentry.issues.endpoints.test_group_hashes",
    "tests.sentry.issues.endpoints.test_group_notes",
    "tests.sentry.issues.endpoints.test_group_notes_details",
    "tests.sentry.issues.endpoints.test_group_open_periods",
    "tests.sentry.issues.endpoints.test_group_similar_issues_embeddings",
    "tests.sentry.issues.endpoints.test_group_tombstone",
    "tests.sentry.issues.endpoints.test_group_tombstone_details",
    "tests.sentry.issues.endpoints.test_organization_group_search_view_details",
    "tests.sentry.issues.endpoints.test_organization_group_search_view_visit",
    "tests.sentry.issues.endpoints.test_organization_group_search_views",
    "tests.sentry.issues.endpoints.test_organization_issues_count",
    "tests.sentry.issues.endpoints.test_organization_searches",
    "tests.sentry.issues.endpoints.test_organization_shortid",
    "tests.sentry.issues.endpoints.test_project_group_stats",
    "tests.sentry.issues.endpoints.test_project_stacktrace_link",
    "tests.sentry.issues.endpoints.test_related_issues",
    "tests.sentry.issues.endpoints.test_shared_group_details",
    "tests.sentry.issues.endpoints.test_source_map_debug",
    "tests.sentry.issues.endpoints.test_team_groups_old",
    "tests.sentry.issues.escalating.test_escalating",
    "tests.sentry.issues.escalating.test_escalating_issues_alg",
    "tests.sentry.issues.escalating.test_issue_velocity",
    "tests.sentry.issues.ownership.*",
    "tests.sentry.issues.test_attributes",
    "tests.sentry.issues.test_group_attributes_dataset",
    "tests.sentry.issues.test_grouptype",
    "tests.sentry.issues.test_ignored",
    "tests.sentry.issues.test_ingest",
    "tests.sentry.issues.test_issue_occurrence",
    "tests.sentry.issues.test_json_schemas",
    "tests.sentry.issues.test_merge",
    "tests.sentry.issues.test_occurrence_consumer",
    "tests.sentry.issues.test_ongoing",
    "tests.sentry.issues.test_priority",
    "tests.sentry.issues.test_producer",
    "tests.sentry.issues.test_run",
    "tests.sentry.issues.test_search_issues_dataset",
    "tests.sentry.issues.test_status_change",
    "tests.sentry.issues.test_status_change_consumer",
    "tests.sentry.issues.test_update_inbox",
    "tests.sentry.middleware.test_reporting_endpoint",
    "tests.sentry.organizations.*",
    "tests.sentry.post_process_forwarder.*",
    "tests.sentry.profiling.*",
    "tests.sentry.queue.*",
    "tests.sentry.ratelimits.test_leaky_bucket",
    "tests.sentry.relay.config.test_metric_extraction",
    "tests.sentry.replays.unit.lib.*",
    "tests.sentry.rules.actions.base.*",
    "tests.sentry.security.*",
    "tests.sentry.snuba.metrics.test_metrics_query_layer.*",
    "tests.sentry.tasks.integrations.*",
    "tests.sentry.tasks.test_on_demand_metrics",
    "tests.sentry.types.*",
    "tests.sentry.types.test_actor",
    "tests.sentry.types.test_region",
    "tests.sentry.usage_accountant.*",
    "tests.sentry.users.services.*",
    "tests.sentry.utils.mockdata.*",
    "tests.sentry.web.frontend.test_cli",
    "tools.*",
]
disallow_any_generics = true
disallow_untyped_defs = true
# end: stronger typing
